--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Collaborative PL-Science
-description: Collaborative PL-Science is a tool to assist researchers to perform experiments and build scientific workflows
+title: ECOS PL-Science
+description: ECOS PL-Science is a tool to assist researchers to perform experiments and build scientific workflows
 email: vitor.freitas@ice.ufjf.br
 url: "http://pgcc.github.io" # the base hostname & protocol for your site
 github_username:  pgcc
